@@ -1,3 +1,9 @@
+2001-03-16  Sam Steingold  <sds@gnu.org>
+
+	`compile-file-pathname' bug fix
+	* compiler.lisp (compile-file-pathname-helper): new function
+	(compile-file-pathname, compile-file): use it
+
 2001-03-15  Bruno Haible  <haible@clisp.cons.org>
 
 	* Makefile.devel (all): Depend on src/VERSION instead of src/version.h.
